--- a/EDA_FeatureEngennering_Integration.ipynb
+++ b/EDA_FeatureEngennering_Integration.ipynb
@@ -1345,7 +1345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can also notice that in each year the movie industry makes more revenue"
+    "We can also notice that in recent years the movie industry makes more revenue"
    ]
   },
   {
@@ -2108,7 +2108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since both model got a LOT of hyper parameters we had to come up with some automatic way of checking which model is the best. For that purpose we used RandomizedSearchCV which is implemented in sklearn library. It basicaly perform lots of expirements with different parameters while using cross-validation (regular k-folds) in order to determinate which set of parameters is the best. It looks like that in our code (example for LightGBM):"
+    "Since both models got a LOT of hyper parameters we had to come up with some automatic way of checking which model is the best. For that purpose we used RandomizedSearchCV which is implemented in sklearn library. It basicaly perform lots of expirements with different parameters while using cross-validation (regular k-folds) in order to determinate which set of parameters is the best. It looks like that in our code (example for LightGBM):"
    ]
   },
   {
@@ -2154,7 +2154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After finding the optimal parameters, we ran a final training and a precieved the following results:"
+    "After finding the optimal parameters, we ran a final training and a received the following results:"
    ]
   },
   {
